# sc_tools

./: .dockerignore  .gitignore  .mcp.json  .readthedocs.yaml  Architecture.md  CLAUDE.md  Dockerfile  ENVIRONMENT_SETUP.md  Journal.md  LICENSE  Makefile  Mission.md  README.md  REORGANIZATION_PLAN.md  REORGANIZATION_STATUS.md  Snakefile  WORKFLOW.md  alembic.ini  environment.yml  journal_summary.md  project_setup.md  push_to_github.sh  pyproject.toml  requirements.txt  skills.md
.claude/: settings.json
.claude/agents/: documentor.md  figure-maker.md  frontend-developer.md  generic.md  git.md  hpc-runner.md  literature-scout.md  ml-engineer.md  orchestrator.md  pipeline-developer.md  pipeline-evaluator.md  pipeline-executor.md  repo-maintainer.md  reviewer.md  science-writer.md  supabase.md  systems-biologist.md
.claude/commands/: monitor-job.md
.cursor/rules/: containers-apptainer.mdc  containers.mdc  git-no-large-files.mdc  journal-and-mission.mdc
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
containers/: README.md  sc_tools_gpu.def
docs/: Architecture.md  Journal.md  Mission.md  Plan.md  Scratch Pad.md  biodata-api.md  biodata-hierarchy.md  conf.py  conventions.md  data_migration_plan.md  index.rst  installation.rst  journal_summary.md  project_setup.md  registry.md  registry_guide.md  skills.md  spatial-omics-qc.SKILL.md  visium_hd_qc_upgrade.md
docs/_static/: custom.css
docs/api/: bm.rst  index.rst  ingest.rst  memory.rst  pipeline.rst  pl.rst  pp.rst  qc.rst  registry.rst  storage.rst  tl.rst  utils.rst  validate.rst
docs/knowledge/: biodata-hierarchy.md  clinical-data-schema.md  journal-figure-requirements.md
docs/known-errors/: arrow-string-h5ad.md
docs/plans/: 2026-03-08-biodata-v1.md  2026-03-11-biodata-v1-1.md  2026-03-12-cayuga-rsync.md  2026-03-12-claude-plan-registry-separation.md  2026-03-12-container-deployment-v1.md  2026-03-12-dlbcl-fig5-cosmx.md  2026-03-12-dlbcl-manuscript-reproduction.md  2026-03-12-ibd-spatial-integration-v1.md  2026-03-12-ibd-spatial-integration-v2.md  2026-03-12-imc-benchmark-finish.md  2026-03-12-imc-luad-atlas-masterplan-v0.md  2026-03-12-plan-claude-code-hooks-project-scoped-container-mounts.md  2026-03-12-plan-consolidate-and-clean-up-ggo-imc-repository.md  2026-03-13-ggo-imc-second-pass-refactoring.md  2026-03-14-benchmark-report-upgrade.md  _index.md
docs/tutorials/: 01_getting_started.ipynb  02_qc.ipynb  03_preprocessing.ipynb  04_signature_scoring.ipynb  05_deconvolution.ipynb  06_spatial_analysis.ipynb  index.rst
ggo_tools/: __init__.py
ggo_tools/data/: __init__.py  deconvolution.py  io.py
ggo_tools/memory/: __init__.py  profiling.py
projects/: README.md  create_project.sh
projects/cosmx/cosmx_full_library/: CLAUDE.md  Journal.md  Mission.md  Snakefile  config.yaml  journal_summary.md  pyproject.toml
projects/cosmx_1k/: CLAUDE.md  Snakefile  pyproject.toml
projects/cosmx_6k/: CLAUDE.md  Journal.md  Mission.md  Plan.md  Snakefile  config.yaml  journal_summary.md  pyproject.toml
projects/cosmx_full_library/: CLAUDE.md  Journal.md  Mission.md  Plan.md  Snakefile  config.yaml
projects/imc/: README.md
projects/visium/ggo_visium/: CLAUDE.md  Journal.md  Makefile  Mission.md  Plan.md  Snakefile  config.yaml  hypotheses.md  journal_summary.md  pyproject.toml  run_docker.sh
projects/visium/ggo_visium/metadata/: gene_signatures.json
projects/visium/ggo_visium/tests/: __init__.py  test_qc_plots_ggo.py
sc_analysis/: __init__.py
sc_tools/: __init__.py  __main__.py  biodata.py  cli.py  errors.py  pipeline.py  registry.py  storage.py  validate.py
sc_tools/assembly/: __init__.py  _atlas.py  _build.py  _metadata.py  _query.py
sc_tools/assets/: base_report_template.html  benchmark_config_template.yaml  benchmark_report_template.html  integration_report_template.html  post_celltyping_qc_template.html  post_filter_qc_template.html  post_integration_qc_template.html  pre_filter_qc_template.html  qc_report_template.html  segmentation_report_template.html
sc_tools/bm/: __init__.py  analysis.py  cli.py  deepcell_runner.py  integration.py  mask_io.py  postprocess.py  report.py  runner.py  segment.py  segmentation.py  slurm.py  strategy_dna.py  strategy_hf.py  strategy_vit.py
sc_tools/cli/: __init__.py  assemble.py  benchmark.py  concat.py  de.py  discovery.py  estimate.py  preprocess.py  provenance.py  qc.py  status.py  validate.py
sc_tools/data/: __init__.py  benchmark_report_template.html  hallmark_human.json  integration_report_template.html  io.py  post_celltyping_qc_template.html  post_filter_qc_template.html  post_integration_qc_template.html  pre_filter_qc_template.html  qc_report_template.html  segmentation_report_template.html
scripts/: annotation2mask_img.py  basic_analysis.py  celltype_deconvolution.py  celltype_deconvolution_phase3.py  celltype_deconvolution_tangram.py  celltyping.py  clustering.py  create_tls_anndata.py  generate_phase0_sbatch.py  ingest.py  loupe2adata.py  macrophage_localization.py  manuscript_spatial_plots.py  migrate_external_to_data_sources.py  migrate_sqlite_to_pg.py  neutrophil_cytotoxic_tcell_localization.py  plot_deconvolution_spatial.py  populate_registry.py  preprocessing.py  process_colocalization.py  run_apptainer.sh  run_container.sh  run_docker.sh  run_integration_benchmark.py  run_preprocessing.py  run_qc_report.py  run_qc_reports_all_projects.py  save_plan.py  score_gene_signatures.py  seed_biodata.py  seed_clinical_data.py  signature_heatmap.py  signature_heatmap_versioned.py  spatial_analysis.py  spatial_multipage.py  spatial_multipage_colocalization.py  spot_deg.py  spot_proportion.py  sync_wiki.py  test_cell2location_spots.py  (+4 more)
supabase/: config.toml
(+486 files in other folders)
