[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sci-sc-tools"
version = "0.1.0"
description = "Scientific analysis tools for spatial and single-cell multiomics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Junbum Kim" },
]
keywords = [
    "spatial-transcriptomics",
    "single-cell",
    "multiomics",
    "scanpy",
    "anndata",
    "deconvolution",
    "colocalization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
sct = "sc_tools.cli:app"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scanpy>=1.9",
    "squidpy>=1.3",
    "anndata>=0.10",
    "tqdm>=4.65",
    "Pillow>=10.0",
    "tifffile>=2023.1.0",
    "statsmodels>=0.14",
    "statannotations>=0.6",
    "pingouin>=0.5",
    "dask>=2024.1",
    "dask-expr>=1.0",
]

[project.optional-dependencies]
# Remote storage backends (S3, SFTP, GCS, Azure, Zarr)
storage = [
    "fsspec>=2024.1",
    "s3fs>=2024.1",
    "sshfs>=0.13",
    "gcsfs>=2024.1",
    "adlfs>=2024.1",
    "zarr>=2.18",
    "ome-zarr>=0.9",
]
# Box storage (separate: requires OAuth flow at runtime)
storage-box = [
    "boxfs>=0.2",
]
# Registry database (SQLite default, PostgreSQL optional)
registry = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
]
# MCP servers (Model Context Protocol)
mcp = [
    "mcp>=1.0",
]
# CLI interface (sct command)
cli = [
    "typer>=0.24",
    "rich>=14.0",
    "pydantic>=2.10",
]
# Full pipeline: integration and deconvolution
deconvolution = [
    "scvi-tools>=1.0",
    "tangram-sc>=1.0",
]
# Pipeline runtime: everything needed for HPC jobs (baked into the container image)
# Install: pip install -e ".[pipeline]"
pipeline = [
    "scvi-tools>=1.0",
    "tangram-sc>=1.0",
    "harmonypy",
    "bbknn",
    "scanorama",
    "leidenalg",
    "igraph",
    "lifelines>=0.27",
    "scib-metrics>=0.4",
    "plotly>=5.18",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "marsilea>=0.4",
    "fsspec>=2024.1",
    "s3fs>=2024.1",
    "zarr>=2.18",
]
# Gene set scoring and enrichment testing
geneset = [
    "gseapy>=1.0",
    "pyucell>=0.1",
]
# Transcription factor / signaling pathway activity (decoupleR)
decoupler = [
    "decoupler>=1.4",
]
# Batch integration
integration = [
    "harmonypy",
    "bbknn",
    "scanorama",
]
# Spatial clustering
spatial = [
    "utag",
]
# Extra for large-scale / GPU workflows
gpu = [
    "torch",
    "rapids-singlecell",
]
# Publication-quality composite figures
viz = [
    "marsilea>=0.4",
]
# Benchmarking (segmentation and integration comparison)
benchmark = [
    "scikit-image>=0.21",
    "scib-metrics>=0.4",
    "plotly>=5.18",
    "cellpose>=3.0,<4.0",
    "stardist>=0.9",
]
# Automated cell typing (celltypist, scArches)
celltyping = [
    "celltypist>=1.3",
    "scarches>=0.5",
]
# Foundation model cell typing (Geneformer, scGPT)
foundation = [
    "transformers>=4.36",
    "datasets>=2.16",
    "accelerate>=0.26",
]
# Extended benchmarking (GPU models, SegFormer training)
benchmark-extended = [
    "scikit-image>=0.21",
    "scib-metrics>=0.4",
    "plotly>=5.18",
    "cellpose>=3.0,<4.0",
    "stardist>=0.9",
    "deepcell>=0.12",
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.30",
    "segmentation-models-pytorch>=0.3",
    "albumentations>=1.3",
]
# Development and testing
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "igraph",
    "leidenalg",
]
# Documentation
docs = [
    "sphinx>=7.2",
    "pydata-sphinx-theme>=0.15",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
    "myst-nb>=1.0",
    "ipykernel",
]

[project.urls]
Repository = "https://github.com/yoffelab/sc_tools"
Documentation = "https://sc-tools.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["sc_tools*"]

[tool.setuptools.package-data]
sc_tools = [
    "data/*.json",
    "data/imc/benchmark/*.yml",
    "data/marker_db/*.json",
    "data/gating_templates/*.yaml",
    "assets/*.html",
    "assets/*.yaml",
]

[tool.ruff]
target-version = "py311"
line-length = 100
# Lint sc_tools (required). Scripts: add once fixed (run: ruff check scripts --exclude scripts/old_code).
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "scripts/old_code",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "E741",   # ambiguous I (used for Moran's I in spatial stats)
    "E402",   # module level import not at top (common in scripts with lazy loading)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["sc_tools/tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
